# anathema

./: .gitignore  CHANGES.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  build.rs  larkotoml.lol.toml  renamemetocargo.toml  rustfmt.toml
anathema-backend/: Cargo.toml
anathema-backend/src/: lib.rs
anathema-backend/src/oneshot/: buffer.rs  mod.rs  screen.rs
anathema-backend/src/test/: mod.rs
anathema-backend/src/testing/: events.rs  mod.rs  surface.rs
anathema-backend/src/tui/: buffer.rs  commands.rs  events.rs  mod.rs  screen.rs  ssh.rs  style.rs
anathema-backend/src/tuiscroll/: mod.rs
anathema-compiler/: Cargo.toml
anathema-compiler/src/: error.rs  lexer.rs  lib.rs  main.rs  operator.rs  token.rs
anathema-compiler/src/compiler/: mod.rs  optimizer.rs
anathema-compiler/src/constants/: conditions.rs  mod.rs  paths.rs  storage.rs  strings.rs  texts.rs  values.rs  views.rs
anathema-compiler/src/parsing/: attribute_parser.rs  cond_parser.rs  fields.rs  lexer.rs  mod.rs  parser.rs  pratt.rs  value_parser.rs
anathema-debug/: Cargo.toml
anathema-debug/src/: lib.rs
anathema-default-widgets/: Cargo.toml  tags
anathema-default-widgets/src/: alignment.rs  border.rs  canvas.rs  container.rs  expand.rs  lib.rs  overflow.rs  padding.rs  position.rs  spacer.rs  testing.rs  text.rs  viewport.rs
anathema-default-widgets/src/layout/: alignment.rs  border.rs  expand.rs  many.rs  mod.rs  spacers.rs
anathema-default-widgets/src/stacks/: column.rs  hstack.rs  mod.rs  row.rs  vstack.rs  zstack.rs
anathema-geometry/: Cargo.toml
anathema-geometry/src/: lib.rs  position.rs  rect.rs  region.rs  size.rs
anathema-render/: Cargo.toml
anathema-render/src/: buffer.rs  lib.rs  screen.rs  style.rs
anathema-runtime/: Cargo.toml
anathema-runtime/src/: builder.rs  components.rs  error.rs  events.rs  frame.rs  lib.rs  messages.rs  meta.rs  renderonly.rs  runtime.rs  tabindex.rs  testing.rs  tree.rs  view.rs
anathema-runtime/src/events/: flume.rs  mod.rs
anathema-runtime/src/runtime/: error.rs  mod.rs  testing.rs
anathema-ssh/: Cargo.toml  build.rs
anathema-ssh/src/: error.rs  eventmapper.rs  lib.rs  sshbackend.rs  sshserver.rs  terminalhandle.rs
anathema-state/: Cargo.toml
anathema-state-derive/: Cargo.toml
anathema-state-derive/src/: attributes.rs  errors.rs  lib.rs  structs.rs
anathema-state/src/: colors.rs  common.rs  lib.rs  numbers.rs  states.rs
anathema-state/src/store/: change.rs  debug.rs  mod.rs  subscriber.rs  values.rs  watchers.rs
anathema-state/src/value/: list.rs  map.rs  maybe.rs  mod.rs  pretty-values.py
anathema-store/: Cargo.toml
anathema-store/src/: buffer.rs  indexmap.rs  lib.rs  regionlist.rs  smallmap.rs  sorted.rs  stack.rs
anathema-store/src/slab/: basic.rs  generational.rs  mod.rs  rc.rs  secondary_map.rs
anathema-store/src/storage/: mod.rs  strings.rs
anathema-store/src/store/: mod.rs  owned.rs  shared.rs
anathema-store/src/store2/: mod.rs  owned.rs  shared.rs
anathema-store/src/tree/: foreach.rs  iter.rs  mod.rs  nodepath.rs  pathfinder.rs  pathlist.rs  transactions.rs  view.rs  visitor.rs  walker.rs
anathema-strings/: Cargo.toml
anathema-strings/src/: lib.rs  region.rs
anathema-strings/src/storage/: mod.rs  transaction.rs
anathema-templates/: Cargo.toml
anathema-templates/src/: blueprints.rs  components.rs  document.rs  lexer.rs  lexer.rs.orig  lib.rs  primitives.rs  strings.rs  token.rs  variables.rs
anathema-templates/src/error/: mod.rs  parse.rs
anathema-templates/src/expressions/: eval.rs  mod.rs  parser.rs
anathema-templates/src/statements/: const_eval.rs  eval.rs  eval.rs.orig  mod.rs  parser.rs
anathema-testing/: Cargo.toml  examplecase.taml
anathema-testing/src/: error.rs  lib.rs  main.rs  testcase.rs
anathema-testing/src/parse/: args.rs  mod.rs
anathema-testutils/: Cargo.toml
anathema-testutils/src/: lib.rs
anathema-value-derive/: Cargo.toml
anathema-value-derive/src/: lib.rs
anathema-value-resolver/: Cargo.toml
anathema-value-resolver/src/: attributes.rs  collection.rs  context.rs  expression.rs  exprresolve.rs  functions.rs  immediate.rs  lib.rs  null.rs  scope.rs  testing.rs  value.rs
anathema-value-resolver/src/functions/: list.rs  mod.rs  number.rs  string.rs
anathema-values/: Cargo.toml
anathema-values/benches/: bench.rs
anathema-values/src/: bucket.rs  collection.rs  fragment.rs  generation.rs  hashmap.rs  id.rs  layout_values.rs  lib.rs  list.rs  main.rs  map.rs  mod.rs  notifier.rs  path.rs  scope.rs  scopes.rs  slab.rs  state.rs  storage.rs  store.rs  testing.rs  value.rs  value_expr-old.rs  value_expr.rs  values.rs
anathema-values/src/bucket/: mod.rs
anathema-values/src/slab/: generational.rs  mod.rs  simple.rs
anathema-values/src/state/: mod.rs  value.rs
anathema-values/src/store/: map.rs  mod.rs
anathema-values/src/v2/: id.rs  list.rs  map.rs  mod.rs  (+3 more)
anathema-vm/: Cargo.toml
anathema-vm/src/: ctx.rs  error.rs  lib.rs  scope.rs  vm.rs
anathema-widget-core/: Cargo.toml  notes.md  views.md
anathema-widget-core/src/: attributes.rs  container.rs  error.rs  event.rs  factory.rs  fragment.rs  id.rs  lib.rs  lookup.rs  notifications.rs  path.rs  style.rs  template.rs  testing.rs  values.rs  views.rs  widget.rs
anathema-widgets/: .gdb_history  Cargo.toml
anathema-widgets/oldtestsneedstobeported/: basic.rs  collections.rs  run.rs
anathema-widgets/src/: alignment-old-dot-com.rs  alignment.rs  animation.rs  attributes.rs  border.rs  canvas.rs  console.rs  container.rs  debug.rs  error.rs  expand.rs  expressions.rs  expressions2.rs  flexible.rs  hstack.rs  id.rs  lib.rs  lookup.rs  paint.rs  path.rs  position.rs  scope.rs  spacer.rs  stack.rs  tabindex.rs  template.rs  testing.rs  text.rs  values.rs  view.rs  viewport.rs  vstack.rs  widget.rs  zstack.rs
anathema-widgets/tests/: attributes.rs  basic.rs  collections.rs  dynval.rs  run.rs
runtime/: Cargo.toml
runtime/src/: appstate.rs  error.rs  events.rs  lib.rs  runtime.rs
widgets/: Cargo.toml
widgets/src/: animation.rs  attributes.rs  ctx.rs  id.rs  lib.rs  testing.rs
(+322 files in other folders)
