[package]
name = "anathema"
edition = "2021"
version = "0.2.0"
license = "MIT"
description = "Create beautiful, easily customisable terminal applications"
keywords = ["tui", "terminal", "widgets", "ui"]
categories = ["command-line-interface", "tui", "terminal", "template", "markup"]
readme = "./README.md"
documentation = "https://docs.rs/anathema"
homepage = "https://github.com/togglebyte/anathema"
repository = "https://github.com/togglebyte/anathema"

[dependencies]
anathema-debug = { path = "./anathema-debug" }
anathema-default-widgets = { path = "./anathema-default-widgets" }
anathema-backend = { path = "./anathema-backend" }
anathema-runtime = { path = "./anathema-runtime" }
anathema-state = { path = "./anathema-state" }
anathema-state-derive = { path = "./anathema-state-derive" }
anathema-store = { path = "./anathema-store" }
anathema-templates = { path = "./anathema-templates" }
anathema-widgets = { path = "./anathema-widgets" }
anathema-geometry = { path = "./anathema-geometry" }
anathema-strings = { path = "./anathema-strings" }
anathema-value-resolver = { path = "./anathema-value-resolver" }

[features]
default = []
profile = ["anathema-runtime/profile", "anathema-widgets/profile"]

[lints]
workspace = true

[workspace.package]
version = "0.2.0"
edition = "2021"

[workspace.dependencies]
bitflags = "2.4.1"
crossterm = "0.28.1"
unicode-width = "0.1.11"
flume = "0.11.0"
notify = "6.1.1"

[workspace]
members = [
    "anathema-backend", 
    "anathema-runtime", 
    "anathema-debug", 
    "anathema-default-widgets", 
    "anathema-geometry", 
    "anathema-state",
    "anathema-state-derive",
    "anathema-store",
    "anathema-strings",
    "anathema-templates", 
    "anathema-widgets", 
    "anathema-value-resolver", 
]

[workspace.lints.rust]
rust_2018_idioms = "deny"

[workspace.lints.clippy]
from_over_into = "allow"
len_without_is_empty = "allow"
new_without_default = "allow"
should_implement_trait = "allow"
type_complexity = "allow"
too_many_arguments = "allow"
wrong_self_convention = "allow"
