[package]
name = "anathema"
edition = "2024"
version = "0.2.1"
license = "MIT"
description = "Create beautiful, easily customisable terminal applications"
keywords = ["tui", "terminal", "widgets", "ui", "layout"]
categories = ["command-line-interface"]
readme = "./README.md"
documentation = "https://togglebyte.github.io/anathema-guide/"
homepage = "https://github.com/togglebyte/anathema"
repository = "https://github.com/togglebyte/anathema"
publish = true

[dependencies]
anathema-default-widgets = { path = "./anathema-default-widgets", version = "0.2.1" }
anathema-backend = { path = "./anathema-backend", version = "0.2.1" }
anathema-runtime = { path = "./anathema-runtime", version = "0.2.1" }
anathema-state = { path = "./anathema-state", version = "0.2.1" }
anathema-state-derive = { path = "./anathema-state-derive", version = "0.2.1" }
anathema-store = { path = "./anathema-store", version = "0.2.1" }
anathema-templates = { path = "./anathema-templates", version = "0.2.1" }
anathema-widgets = { path = "./anathema-widgets", version = "0.2.1" }
anathema-geometry = { path = "./anathema-geometry", version = "0.2.1" }
anathema-value-resolver = { path = "./anathema-value-resolver", version = "0.2.1" }

[features]
default = []
profile = ["anathema-runtime/profile", "anathema-widgets/profile", "anathema-backend/profile"]
# filelog = ["anathema-debug/filelog"]

[lints]
workspace = true

[workspace.package]
edition = "2024"
version = "0.2.1"

[workspace.dependencies]
bitflags = "2.4.1"
crossterm = "0.28.1"
unicode-width = "0.1.11"
flume = "0.11.0"
notify = "6.1.1"
anathema-debug = { path = "testutils" }

[workspace]
members = [
    "anathema-backend", 
    "anathema-runtime", 
    "anathema-debug", 
    "anathema-default-widgets", 
    "anathema-geometry", 
    "anathema-state",
    "anathema-state-derive",
    "anathema-store",
    "anathema-templates", 
    "anathema-widgets", 
    "anathema-value-resolver",
]

[workspace.lints.rust]
rust_2018_idioms = "deny"

[workspace.lints.clippy]
from_over_into = "allow"
len_without_is_empty = "allow"
new_without_default = "allow"
should_implement_trait = "allow"
type_complexity = "allow"
too_many_arguments = "allow"
wrong_self_convention = "allow"

[dev-dependencies]
testutils = { path = "testutils" }

