[package]
name = "anathema-backend"
license = "MIT"
description = "Various backends for Anathema"
version.workspace = true
edition.workspace = true

[dependencies]
anathema-geometry = { path = "../anathema-geometry", version = "0.2.1" }
anathema-state = { path = "../anathema-state", version = "0.2.1" }
anathema-store = { path = "../anathema-store", version = "0.2.1" }
anathema-strings = { path = "../anathema-strings", version = "0.2.1" }
anathema-templates = { path = "../anathema-templates", version = "0.2.1" }
anathema-value-resolver = { path = "../anathema-value-resolver", version = "0.2.1" }
anathema-widgets = { path = "../anathema-widgets", version = "0.2.1" }
crossterm = { workspace = true }
unicode-width = { workspace = true }
bitflags = { workspace = true }
puffin = { version = "0.19.1", optional = true }

[features]
default = []
profile = ["puffin"]

[lints]
workspace = true
