[package]
name = "anathema-backend"
license = "MIT"
description = "Various backends for Anathema"
version.workspace = true
edition.workspace = true
documentation = "https://togglebyte.github.io/anathema-guide/"
homepage = "https://github.com/togglebyte/anathema"
repository = "https://github.com/togglebyte/anathema"

[dependencies]
anathema-geometry = { workspace = true }
anathema-state = { workspace = true }
anathema-store = { workspace = true }
anathema-templates = { workspace = true }
anathema-value-resolver = { workspace = true }
anathema-widgets = { workspace = true }
crossterm = { workspace = true }
unicode-width = { workspace = true }
bitflags = { workspace = true }
puffin = { version = "0.19.1", optional = true }

[features]
default = []
profile = ["puffin"]
osc = []

[lints]
workspace = true
