[package]
name = "anathema-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# anathema-widget-core = { path = "../anathema-widget-core" }
anathema-values = { path = "../anathema-values" }
anathema-render = { path = "../anathema-render" }
