[package]
name = "anathema-debug"
license = "MIT"
description = "Debug utils for Anathema"
version.workspace = true
edition.workspace = true
documentation = "https://togglebyte.github.io/anathema-guide/"
homepage = "https://github.com/togglebyte/anathema"
repository = "https://github.com/togglebyte/anathema"

[dependencies]

[features]
default = []
filelog = []

[lints]
workspace = true
