[package]
name = "anathema-default-widgets"
license = "MIT"
description = "Default widget implementations for Anathema"
version.workspace = true
edition.workspace = true
documentation = "https://togglebyte.github.io/anathema-guide/"
homepage = "https://github.com/togglebyte/anathema"
repository = "https://github.com/togglebyte/anathema"

[dependencies]
anathema-backend = { path = "../anathema-backend", version = "0.2.1" }
anathema-geometry = { path = "../anathema-geometry", version = "0.2.1" }
anathema-state = { path = "../anathema-state", version = "0.2.1" }
anathema-store = { path = "../anathema-store", version = "0.2.1" }
anathema-templates = { path = "../anathema-templates", version = "0.2.1" }
anathema-value-resolver = { path = "../anathema-value-resolver", version = "0.2.1" }
anathema-widgets = { path = "../anathema-widgets", version = "0.2.1" }
bitflags = { workspace = true }
unicode-width = { workspace = true }

[lints]
workspace = true
