[package]
name = "anathema-default-widgets"
license = "MIT"
description = "Default widget implementations for Anathema"
version.workspace = true
edition.workspace = true
documentation = "https://togglebyte.github.io/anathema-guide/"
homepage = "https://github.com/togglebyte/anathema"
repository = "https://github.com/togglebyte/anathema"

[dependencies]
anathema-backend = { workspace = true }
anathema-geometry = { workspace = true }
anathema-state = { workspace = true }
anathema-store = { workspace = true }
anathema-templates = { workspace = true }
anathema-value-resolver = { workspace = true }
anathema-widgets = { workspace = true }
bitflags = { workspace = true }
unicode-width = { workspace = true }

[lints]
workspace = true
