[package]
name = "anathema-geometry"
license = "MIT"
description = "Geometry, positions and sizes for Anathema"
version.workspace = true
edition.workspace = true
documentation = "https://togglebyte.github.io/anathema-guide/"
homepage = "https://github.com/togglebyte/anathema"
repository = "https://github.com/togglebyte/anathema"

[dependencies]

[lints]
workspace = true
