[package]
name = "anathema-render"
version = "0.1.0"
edition = "2021"
description = "Anathema renderer"
license = "MIT"
homepage = "https://github.com/togglebyte/anathema"
repository = "https://github.com/togglebyte/anathema"
documentation = "https://docs.rs/anathema-renderer"

[dependencies]
bitflags = { workspace = true }
crossterm = { workspace = true }
unicode-width = { workspace = true }

[lints]
workspace = true
