[package]
name = "anathema-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
anathema-geometry = { path = "../anathema-geometry" }
anathema-debug = { path = "../anathema-debug" }
anathema-default-widgets = { path = "../anathema-default-widgets" }
anathema-backend = { path = "../anathema-backend" }
anathema-state = { path = "../anathema-state" }
anathema-store = { path = "../anathema-store" }
anathema-strings = { path = "../anathema-strings" }
anathema-templates = { path = "../anathema-templates" }
anathema-widgets = { path = "../anathema-widgets" }
anathema-value-resolver = { path = "../anathema-value-resolver" }
flume = { workspace = true }
notify = { workspace = true }
puffin = { version = "0.19.1", features = ["web"], optional = true }
puffin_http = { version = "0.16.1", optional = true }

[features]
default = []
profile = ["puffin", "puffin_http"]

[lints]
workspace = true
