[package]
name = "anathema-runtime"
license = "MIT"
description = "Anathema runtime"
version.workspace = true
edition.workspace = true

[dependencies]
anathema-geometry = { path = "../anathema-geometry", version = "0.2.1" }
anathema-debug = { path = "../anathema-debug", version = "0.2.1" }
anathema-default-widgets = { path = "../anathema-default-widgets", version = "0.2.1" }
anathema-backend = { path = "../anathema-backend", version = "0.2.1" }
anathema-state = { path = "../anathema-state", version = "0.2.1" }
anathema-store = { path = "../anathema-store", version = "0.2.1" }
anathema-strings = { path = "../anathema-strings", version = "0.2.1" }
anathema-templates = { path = "../anathema-templates", version = "0.2.1" }
anathema-widgets = { path = "../anathema-widgets", version = "0.2.1" }
anathema-value-resolver = { path = "../anathema-value-resolver", version = "0.2.1" }
flume = { workspace = true }
notify = { workspace = true }
puffin = { version = "0.19.1", features = ["web"], optional = true }
puffin_http = { version = "0.16.1", optional = true }

[features]
default = []
profile = ["puffin", "puffin_http"]

[lints]
workspace = true
