[package]
name = "anathema-runtime"
license = "MIT"
description = "Anathema runtime"
version.workspace = true
edition.workspace = true
documentation = "https://togglebyte.github.io/anathema-guide/"
homepage = "https://github.com/togglebyte/anathema"
repository = "https://github.com/togglebyte/anathema"

[dependencies]
anathema-geometry = { workspace = true }
anathema-default-widgets = { workspace = true }
anathema-backend = { workspace = true }
anathema-state = { workspace = true }
anathema-store = { workspace = true }
anathema-templates = { workspace = true }
anathema-widgets = { workspace = true }
anathema-value-resolver = { workspace = true }
flume = { workspace = true }
notify = { workspace = true }
puffin = { version = "0.19.1", features = ["web"], optional = true }
puffin_http = { version = "0.16.1", optional = true }

[features]
default = []
profile = ["puffin", "puffin_http"]
filelog = []

[lints]
workspace = true
