[package]
name = "anathema-state-derive"
license = "MIT"
description = "Derive macro for Anathema state"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.35"
syn = "2.0.48" # TODO determine which features we should actually use

[lints]
workspace = true
