[package]
name = "anathema-state"
license = "MIT"
description = "Anathema state and value types"
version.workspace = true
edition.workspace = true
documentation = "https://togglebyte.github.io/anathema-guide/"
homepage = "https://github.com/togglebyte/anathema"
repository = "https://github.com/togglebyte/anathema"

[dependencies]
anathema-debug = { path = "../anathema-debug", version = "0.2.2" }
anathema-state-derive = { path = "../anathema-state-derive", version = "0.2.2" }
anathema-store = { path = "../anathema-store", version = "0.2.2" }

[lints]
workspace = true
