[package]
name = "anathema-state"
license = "MIT"
description = "Anathema state and value types"
version.workspace = true
edition.workspace = true
documentation = "https://togglebyte.github.io/anathema-guide/"
homepage = "https://github.com/togglebyte/anathema"
repository = "https://github.com/togglebyte/anathema"

[dependencies]
anathema-state-derive = { workspace = true }
anathema-store = { workspace = true }
serde = { version = "1.0", optional = true, features = ["derive"] }

[features]
default = []
serde = ["dep:serde"]

[lints]
workspace = true
