[package]
name = "anathema-store"
license = "MIT"
description = "Various storage types for Anathema"
version.workspace = true
edition.workspace = true
documentation = "https://togglebyte.github.io/anathema-guide/"
homepage = "https://github.com/togglebyte/anathema"
repository = "https://github.com/togglebyte/anathema"

[dependencies]
anathema-debug = { path = "../anathema-debug", version = "0.2.2" }

[lints]
workspace = true
