[package]
name = "anathema-templates"
license = "MIT"
description = "Anathema template parser (aml)"
version.workspace = true
edition.workspace = true

[dependencies]
anathema-debug = { path = "../anathema-debug", version = "0.2.1" }
anathema-state = { path = "../anathema-state", version = "0.2.1" }
anathema-store = { path = "../anathema-store", version = "0.2.1" }

[lints]
workspace = true
