[package]
name = "anathema-templates"
license = "MIT"
description = "Anathema template parser (aml)"
version.workspace = true
edition.workspace = true
documentation = "https://togglebyte.github.io/anathema-guide/"
homepage = "https://github.com/togglebyte/anathema"
repository = "https://github.com/togglebyte/anathema"

[dependencies]
anathema-debug = { path = "../anathema-debug", version = "0.2.1" }
anathema-state = { path = "../anathema-state", version = "0.2.1" }
anathema-store = { path = "../anathema-store", version = "0.2.1" }

[lints]
workspace = true
