[package]
name = "anathema-testutils"
license = "MIT"
description = "Test utilities for Anathema"
version.workspace = true
edition.workspace = true
documentation = "https://togglebyte.github.io/anathema-guide/"
homepage = "https://github.com/togglebyte/anathema"
repository = "https://github.com/togglebyte/anathema"

[dependencies]
anathema = { path = "../", version = "0.2.3" }

[lints]
workspace = true
