[package]
name = "anathema-value-derive"
version = "0.1.0"
edition = "2021"
description = "Anathema proc macros"
license = "MIT"
homepage = "https://github.com/togglebyte/anathema"
repository = "https://github.com/togglebyte/anathema"
documentation = "https://docs.rs/anathema-value-derive"

[lib]
proc-macro = true

[dependencies]
manyhow = "0.10.4"
quote = "1.0.35"
quote-use = "0.8.0"
syn = "2.0.48"

[lints]
workspace = true
