[package]
name = "anathema-value-resolver"
license = "MIT"
description = "Anathema value resolver"
version.workspace = true
edition.workspace = true
documentation = "https://togglebyte.github.io/anathema-guide/"
homepage = "https://github.com/togglebyte/anathema"
repository = "https://github.com/togglebyte/anathema"

[dependencies]
anathema-state = { path = "../anathema-state", version = "0.2.1" }
anathema-strings = { path = "../anathema-strings", version = "0.2.1" }
anathema-templates = { path = "../anathema-templates", version = "0.2.1" }
anathema-store = { path = "../anathema-store", version = "0.2.1" }
anathema-debug = { path = "../anathema-debug", version = "0.2.1" }

[lints]
workspace = true
