[package]
name = "anathema-value-resolver"
license = "MIT"
description = "Anathema value resolver"
version.workspace = true
edition.workspace = true
documentation = "https://togglebyte.github.io/anathema-guide/"
homepage = "https://github.com/togglebyte/anathema"
repository = "https://github.com/togglebyte/anathema"

[dependencies]
anathema-state = { workspace = true }
anathema-templates = { workspace = true }
anathema-store = { workspace = true }

[lints]
workspace = true
