[package]
name = "anathema-vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { workspace = true }
anathema-compiler = { path = "../anathema-compiler" }
anathema-render = { path = "../anathema-render" }
anathema-values = { path = "../anathema-values" }
anathema-widget-core = { path = "../anathema-widget-core" }
thiserror = { workspace = true }

[lints]
workspace = true
