[package]
name = "anathema-vm"
version = "0.1.0"
edition = "2021"
description = "Anathema virtual machine"
license = "MIT"
homepage = "https://github.com/togglebyte/anathema"
repository = "https://github.com/togglebyte/anathema"
documentation = "https://docs.rs/anathema-vm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { workspace = true }
anathema-compiler = { path = "../anathema-compiler" }
anathema-render = { path = "../anathema-render" }
anathema-values = { path = "../anathema-values" }
anathema-widget-core = { path = "../anathema-widget-core" }
thiserror = { workspace = true }

[lints]
workspace = true
