[package]
name = "anathema-widget-core"
version = "0.1.0"
edition = "2021"
description = "Anathema widget core"
license = "MIT"
homepage = "https://github.com/togglebyte/anathema"
repository = "https://github.com/togglebyte/anathema"
documentation = "https://docs.rs/anathema-widget-core"

[features]
default = ["testing"]
testing = ["anathema-values/testing"]

[dependencies]
anathema-render = { path = "../anathema-render" }
anathema-values = { path = "../anathema-values" }
bitflags = { workspace = true }
unicode-width = { workspace = true }
thiserror = { workspace = true }
crossterm = { workspace = true }
parking_lot = { workspace = true }
kempt = { workspace = true }

[lints]
workspace = true
