[package]
name = "anathema-widgets"
license = "MIT"
description = "Anathema widget base"
version.workspace = true
edition.workspace = true
documentation = "https://togglebyte.github.io/anathema-guide/"
homepage = "https://github.com/togglebyte/anathema"
repository = "https://github.com/togglebyte/anathema"

[dependencies]
anathema-debug = { path = "../anathema-debug", version = "0.2.1" }
anathema-geometry = { path = "../anathema-geometry", version = "0.2.1" }
anathema-state = { path = "../anathema-state", version = "0.2.1" }
anathema-store = { path = "../anathema-store", version = "0.2.1" }
anathema-strings = { path = "../anathema-strings", version = "0.2.1" }
anathema-templates = { path = "../anathema-templates", version = "0.2.1" }
anathema-value-resolver = { path = "../anathema-value-resolver", version = "0.2.1" }
flume = { workspace = true }
bitflags = { workspace = true }
unicode-width = { workspace = true }
unicode-segmentation = "1.11.0"
puffin = { version = "0.19.1", features = ["web"], optional = true }

[features]
default = []
profile = ["puffin"]
debuggy = []

[lints]
workspace = true
