[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[features]
default = []
flume = ["dep:flume"]
serde-json = ["serde_json"]
logging = ["log"]

[dependencies]
display = { path = "../display", features = ["events"] }
widgets = { path = "../widgets" }
templates = { path = "../templates" }
flume = { version = "0.10.13", optional = true }
serde_json = { version = "1.0.81", optional = true }
log = { version = "0.4.17", optional = true }
