[package]
name = "widgets"
version = "0.1.0"
edition = "2021"

[features]
default = []
serde-json = ["serde_json"]
logging = ["log"]

[dependencies]
display = { version = "0.1.0", path = "../display" }
unicode-width = "0.1.9"
antstring = { path = "../antstring" }
bitflags = "1.3.2"
serde_json = { version = "1.0.81", optional = true }
log = { version = "0.4.17", optional = true }
